--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,15 +3,18 @@
 }
 
 #nav-div {
-    
+    width: 90%;
+    margin: 0 auto;
 }
 
 #content-div {
-    
+    width: 90%;
+    margin: 0 auto;
 }
 
 #footer-div {
-
+    width: 90%;
+    margin: 0 auto;
 }
 
 .navbar {
